syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.kyosk.retailbackend";

import "google/protobuf/timestamp.proto";
import "user-service.proto";


service RetailService {
  rpc GetAllProducts (GetAllProductsRequest) returns (GetAllProductsResponse);
  rpc GetProduct (GetProductRequest) returns (GetProductResponse);
  rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse);
  rpc AddProductQuantity (AddProductQuantityRequest) returns (AddProductQuantityResponse);
  rpc ChangeProductPrice (ChangeProductPriceRequest) returns (ChangeProductPriceResponse);
  rpc CreateDiscount (CreateDiscountRequest) returns (CreateDiscountResponse);
  rpc AddDiscountToProduct (AddDiscountToProductRequest) returns (AddDiscountToProductResponse);
  rpc DeactivateDiscount (DeactivateDiscountRequest) returns (DeactivateDiscountResponse);
}

message ProductResponse {
  int64 id = 1;
  string name = 2;
  string product_code = 3;
  string description = 4;
  string image = 5;
  ProductPriceResponse price = 6;
  ProductInventoryResponse product_inventory = 7;
  repeated ProductAttributesResponse product_attributes = 8;
  optional ProductDiscount discount = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
}

message ProductAttributesResponse {
  int64 id = 1;
  int64 product_id = 2;
  string key = 3;
  string value = 4;
}

message ProductInventoryResponse {
  int64 id = 1;
  int64 product_id = 2;
  int64 quantity = 3;
  int64 reorder_level = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message ProductPriceResponse {
  int64 id = 1;
  float price = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message ProductDiscount {
  int32 id = 1;
  ProductResponse product = 2;
  DiscountResponse discount = 3;
}

message DiscountResponse {
  int64 id = 1;
  string code = 2;
  DiscountType discount_type = 3;
  float discount_value = 4;
  bool is_active = 5;
}

message GetAllProductsRequest {

}

message GetAllProductsResponse {
  repeated ProductResponse products = 1;
}

message GetProductRequest {
  int64 product_id = 1;
}

message GetProductResponse {
  ProductResponse product = 1;
}


message CreateProductRequest {
  string name = 1;
  string description = 2;
  string image = 3;
  float price = 4;
  int64 quantity = 5;
  int64 reorder_level = 6;
  repeated ProductAttributesFields product_attributes = 7;
}

message CreateProductResponse {
  ProductResponse product = 1;
}

message ProductAttributesFields  {
  string key = 1;
  string value = 2;
}

message AddProductQuantityRequest {
  int64 product_id = 1;
  int64 quantity = 2;
}

message AddProductQuantityResponse {
  bool success = 1;
}

message ChangeProductPriceRequest {
  int64 product_id = 1;
  float new_price  = 2;
}

message ChangeProductPriceResponse {
  bool success = 1;
}

enum DiscountType {
  PERCENT = 0;
  AMOUNT = 1;
}

message CreateDiscountRequest {
  DiscountType discount_type = 1;
  float discount_value = 2;
}

message CreateDiscountResponse {
  DiscountResponse discount = 1;
}

message  AddDiscountToProductRequest {
  int64 product_id = 1;
  int64 discount_id = 2;
}

message AddDiscountToProductResponse {
  bool success = 1;
}

message DeactivateDiscountRequest {
  int64 discount_id = 1;
}

message DeactivateDiscountResponse {
  bool success = 1;
}




